# audiotrim

./: README.md  config.toml  pyproject.toml
api/: __main__.py  api.py
audiotrim/: __main__.py  audio_utils.py  config_utils.py  gui.py
